[gd_scene load_steps=22 format=3 uid="uid://of4egs3e7r77"]

[ext_resource type="Script" uid="uid://yw8n4pr1epwl" path="res://scripts/fase_1_2.gd" id="1_151fi"]
[ext_resource type="Texture2D" uid="uid://d4fb34s5wwsfu" path="res://assets/backgrounds/background.png" id="2_ugttr"]
[ext_resource type="Texture2D" uid="uid://63uq4p7cmrln" path="res://assets/renovavel e nao.png" id="3_lmo3q"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="3_np2li"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_ugttr"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="4_0ib0h"]
[ext_resource type="Texture2D" uid="uid://b55cjntjc6jop" path="res://assets/item_solar.png" id="4_18obp"]
[ext_resource type="Texture2D" uid="uid://n2nyl5aulady" path="res://assets/b.png" id="4_p01p8"]
[ext_resource type="Texture2D" uid="uid://l42vu2hmdtw0" path="res://assets/item_hidreletrica.png" id="5_xp35h"]
[ext_resource type="Texture2D" uid="uid://bdqmc4i055vu" path="res://assets/item_eolica.png" id="6_0ib0h"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="6_7ryjn"]
[ext_resource type="Texture2D" uid="uid://du8236nmfhjrs" path="res://assets/item_nuclear.png" id="7_lrcup"]
[ext_resource type="Texture2D" uid="uid://br5yvo3ktyyvo" path="res://assets/item_termica.png" id="8_ooj27"]
[ext_resource type="Texture2D" uid="uid://bulxux6am482v" path="res://assets/item_petroleo.png" id="9_pn0b4"]
[ext_resource type="Texture2D" uid="uid://bh836apgwxtye" path="res://assets/botao voltar.png" id="11_xp35h"]
[ext_resource type="Texture2D" uid="uid://dwyw6c8s0hs7q" path="res://assets/energia renovavel.png" id="15_04hbt"]
[ext_resource type="Texture2D" uid="uid://vcs5ahr5jxko" path="res://assets/nao renovavel.png" id="16_by386"]
[ext_resource type="Texture2D" uid="uid://0usu2vf3mhk1" path="res://assets/explicacao 12.png" id="16_e6ybd"]
[ext_resource type="Texture2D" uid="uid://c0bg8xp5r0g0c" path="res://assets/recomecar.png" id="19_by386"]
[ext_resource type="Texture2D" uid="uid://b366f3o3eepqv" path="res://assets/pontilhado grande.png" id="19_i10q8"]
[ext_resource type="Texture2D" uid="uid://cuiktbrxp3nf2" path="res://assets/pontilhado pequeno.png" id="20_j6chi"]

[node name="Fase12" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_151fi")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ugttr")

[node name="explicacao_container" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="titulo_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 424.0
offset_top = 25.0
offset_right = 1053.0
offset_bottom = 124.0
texture = ExtResource("3_lmo3q")

[node name="texto_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 19.0
offset_top = 120.0
offset_right = 1138.0
offset_bottom = 555.0
texture = ExtResource("4_p01p8")

[node name="Explicacao12" type="TextureRect" parent="explicacao_container/texto_label"]
layout_mode = 0
offset_left = 75.0
offset_top = 14.0
offset_right = 1036.0
offset_bottom = 388.0
texture = ExtResource("16_e6ybd")

[node name="button_continuar" type="TextureButton" parent="explicacao_container"]
layout_mode = 0
offset_left = 458.0
offset_top = 536.0
offset_right = 716.0
offset_bottom = 606.0
texture_normal = ExtResource("3_ugttr")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/button_continuar"]
layout_mode = 0
offset_left = 42.0
offset_top = 5.0
offset_right = 212.0
offset_bottom = 45.0
texture = ExtResource("6_7ryjn")

[node name="Label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 6.0
offset_top = 32.0
offset_right = 264.0
offset_bottom = 102.0
texture = ExtResource("3_ugttr")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/Label"]
layout_mode = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 247.0
offset_bottom = 50.0
texture = ExtResource("4_0ib0h")

[node name="exercicio_container" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="instrucao_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 584.0
offset_top = 8.0
offset_right = 726.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "INSTRUCAO"

[node name="area_itens" type="Control" parent="exercicio_container"]
visible = false
anchors_preset = 0
offset_left = 184.0
offset_top = 64.0
offset_right = 976.0
offset_bottom = 288.0

[node name="item_solar" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_right = 104.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("4_18obp")
stretch_mode = 5

[node name="item_hidreletrica" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = 120.0
offset_right = 248.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("5_xp35h")
stretch_mode = 5

[node name="item_eolica" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = 272.0
offset_right = 376.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("6_0ib0h")
stretch_mode = 5

[node name="item_nuclear" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = 400.0
offset_right = 520.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("7_lrcup")
stretch_mode = 3

[node name="item_termica" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = 552.0
offset_right = 664.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("8_ooj27")
stretch_mode = 5

[node name="item_petroleo" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = 712.0
offset_right = 808.0
offset_bottom = 224.0
mouse_filter = 0
texture = ExtResource("9_pn0b4")
stretch_mode = 5

[node name="pontilhados" type="TextureRect" parent="exercicio_container/area_itens"]
layout_mode = 0
offset_left = -101.0
offset_top = 195.0
offset_right = 881.0
offset_bottom = 235.0
texture = ExtResource("19_i10q8")

[node name="pontilhado_pequeno" type="TextureRect" parent="exercicio_container/area_itens/pontilhados"]
layout_mode = 0
offset_left = 493.0
offset_top = 61.0
offset_right = 501.0
offset_bottom = 195.0
texture = ExtResource("20_j6chi")

[node name="area_renovavel" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_left = 576.0
offset_top = 320.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="label_renovavel" type="TextureRect" parent="exercicio_container/area_renovavel"]
layout_mode = 0
offset_left = 204.0
offset_top = -29.0
offset_right = 502.0
offset_bottom = 6.0
texture = ExtResource("15_04hbt")

[node name="area_nao_renovavel" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 648.0

[node name="label_nao_renovavel" type="TextureRect" parent="exercicio_container/area_nao_renovavel"]
layout_mode = 0
offset_left = 99.0
offset_top = -35.0
offset_right = 466.0
texture = ExtResource("16_by386")

[node name="feedback_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 520.0
offset_top = 256.0
offset_right = 560.0
offset_bottom = 279.0

[node name="button_restart" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 456.0
offset_top = 488.0
offset_right = 714.0
offset_bottom = 558.0
texture_normal = ExtResource("19_by386")

[node name="button_continuar" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 456.0
offset_top = 488.0
offset_right = 714.0
offset_bottom = 558.0
texture_normal = ExtResource("3_ugttr")

[node name="TextureRect" type="TextureRect" parent="exercicio_container/button_continuar"]
layout_mode = 0
offset_left = 45.0
offset_top = 9.0
offset_right = 215.0
offset_bottom = 49.0
texture = ExtResource("6_7ryjn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("3_np2li")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 216.0
offset_right = 749.0
offset_bottom = 432.0

[node name="voltar_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 581.0
offset_right = 207.0
offset_bottom = 627.0
texture_normal = ExtResource("11_xp35h")

[connection signal="pressed" from="voltar_button" to="." method="_on_voltar_button_pressed"]
